--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -1,11 +1,11 @@
 footer {
-    background-color: #00FF00;
-    height: 60px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    line-height: 60px;
+  background-color: #00ff00;
+  height: 60px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  line-height: 60px;
 }
 p {
-    text-align: center;
+  text-align: center;
 }
