--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -1,12 +1,12 @@
 footer {
-    background-color: white;
-    height: 60px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    line-height: 60px;
-    border-top: 1px solid #CCCCCC;
+  background-color: white;
+  height: 60px;
+  width: 100%;
+  position: sticky;
+  bottom: 0;
+  line-height: 60px;
+  border-top: 1px solid #cccccc;
 }
 p {
-    text-align: center;
+  text-align: center;
 }
