--- a/web_static/styles/4-filters.css
+++ b/web_static/styles/4-filters.css
@@ -1,27 +1,27 @@
 div.container {
-    max-width: 1000px;
-    margin: 30px auto;
-    text-align: center;
+  max-width: 1000px;
+  margin: 30px auto;
+  text-align: center;
 }
 
 section.filters {
-    background-color: white;
-    height: 70px;
-    width: 100%;
-    border: 1px solid #DDDDDD;
-    border-radius: 4px;
+  background-color: white;
+  height: 70px;
+  width: 100%;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
 }
 section.filters button {
-    font-size: 18px;
-    background-color: #FF5A5F;
-    color: #FFFFFF;
-    height: 48px;
-    width: 20%;
-    border: 0;
-    border-radius: 4px;
-    float: right;
-    margin-right: 30px;
+  font-size: 18px;
+  background-color: #ff5a5f;
+  color: #ffffff;
+  height: 48px;
+  width: 20%;
+  border: 0;
+  border-radius: 4px;
+  float: right;
+  margin-right: 30px;
 }
 section.filters button:hover {
-    opacity: .9;
+  opacity: 0.9;
 }
