--- a/web_static/styles/103-places.css
+++ b/web_static/styles/103-places.css
@@ -1,7 +1,35 @@
+@media only screen and (max-width: 600px) {
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+
+}
 .places {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  z-index: -1;
+}
+
+.places article {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 400px;
+  padding: 1rem;
+  margin: 1rem;
+  border-radius: 4px;
+  border: 1px solid #FF5A5F;
+  box-sizing: border-box;
 }
 
 .places h1 {
@@ -11,15 +39,6 @@
   margin: 10px auto auto;
 }
 
-.places article {
-  width: 390px;
-  padding: 20px;
-  margin: 20px;
-  border-radius: 4px;
-  border: 1px solid #FF5A5F;
-  box-sizing: border-box;
-}
-
 .places h2 {
   font-size: 30px;
   margin: 0;
@@ -27,16 +46,14 @@
   text-align: center;
   flex-grow: 1;
 }
+/* ************************************************** */
+/* article information */
+/* ************************************************** */
 
-article {
-  z-index: -1;
-  display: flex;
-  flex-wrap: wrap;
-}
+/* circle with price */
 .article_places_header {
   width: 100%;
   display: flex;
-
 }
 
 .price_by_night {
@@ -51,7 +68,28 @@ article {
     justify-content: center;
     padding: 5px;
     margin-bottom: 5px;
+    transition: 0.2s ease-in-out;
 }
+/* ******************************************/
+/* ARIA
+/* ******************************************/
+.price_by_night:hover,
+.price_by_night:focus {
+  background-color: antiquewhite;
+  transform: scale(1.1);
+  font-weight: bold;
+  border: 2px dotted;
+  transition: 0.2s ease-in-out;
+}
+
+article:hover,
+article:focus {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: 0.2s ease-in-out;
+}
+/* ******************************************/
+/* information box with icons */
+/* ******************************************/
 
 .information {
   width: 100%;
@@ -69,6 +107,8 @@ article {
   margin: 0;
   padding: 0;
 }
+
+/***********/
 /* icons   */
 
 .max_guest {
@@ -86,7 +126,7 @@ article {
 .max_guest,
 .number_rooms,
 .number_bathrooms {
-  width: 100px;
+  width: 33%;
   background-repeat: no-repeat;
   display:flex;
   flex-direction: column-reverse;
@@ -94,7 +134,9 @@ article {
   text-align:center;
 }
 
-
+/*******************************************/
+/* more information */
+/*******************************************/
 .places .amenities,
 .places .reviews {
   margin-top: 40px;
@@ -122,7 +164,9 @@ article {
 .places .reviews p {
   font-size: 12px;
 }
-
+/*******************************************/
+/* amenities icons */
+/*******************************************/
 .places .amenities ul li{
   display: flex;
   flex-direction: row;
@@ -149,5 +193,4 @@ article {
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
-  display: inline-block;
 }
